@@ -116,6 +116,10 @@ wxMSW:
 2.8.4
 -----
 
+All (Unix):
+
+- Handle socket shutdown by the peer correctly in wxSocket (Tim Kosse)
+
 wxMSW:
 
 - Corrected wxStaticBox label appearance when its foreground colour was set:
